_sass/_layout.scss
/* ******************************************
    Elastic Gutters
****************************************** */

.wrapper {
    padding: 0 0.75em;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;

    /* Max width for current implementation */
    max-width: 1024px;
}

/* ******************************************
    Elastic Gutters for IE6-7
    http://github.com/Schepp/box-sizing-polyfill
****************************************** */

.ie .wrapper {
    /* IE8 doesn't need this, so we use the * hack */
    *behavior: url("/ie/boxsizing.htc");
}

/********************************************
    Fluid Media
********************************************/

figure {
    position: relative;
}

figure img,
figure object,
figure embed,
figure video {
    max-width: 100%;
    display: block;
}

img {
    border: 0;
    -ms-interpolation-mode: bicubic;
}

/********************************************
    Zoomable Baseline Grid
********************************************/

body {
    font-size: 1em; /* 16px */
    line-height: 1.5em; /* 24px */
}

.small,
h5,
h6 {
    font-size: 0.8125em; /* 13px */
    line-height: 1.3846153846153846em; /* 18px */
}

.normal,
h4 {
    font-size: 1em; /* 16px */
    line-height: 1.5em; /* 24px */
}

.big,
h3 {
    font-size: 1.375em; /* 22px */
    line-height: 1.75em; /* 28px */
}

.large,
h2 {
    font-size: 1.625em; /* 26px */
    line-height: 1.23076923076923em; /* 32px */
}

.huge,
h1 {
    font-size: 2.625em; /* 42px */
    line-height: 1.1428571428571428em; /* 48px */

    // @include media-query($on-laptop) {
    //     font-size: 2em;
    // }
}

/********************************************
    Four Column Grid
********************************************/

.container {
    /* margin: 0 5.555555555555555%; */
    padding: 1em 2.555555555555555%; /* Less wasteful at phone widths */
}

h1,
h2 {
    /* margin: 0.9230769230769231em 0 1.3846153846153846em; */
    margin: 0; /* Switch to padding to handle backgrounds for containers */
    padding: 0;
}

h3,
h4 {
    margin: 0;
}

/********************************************
    Primary Navigation
********************************************/

nav #nav-home img {
    border-radius: 100px;
    height: 200px;
    width: 200px;
}

nav #nav-home:hover {
    background-image: none;
}

img.icon-hover {
    position: absolute;
    left: 0;
    opacity: 0;
    transition: all 0.25s ease-in-out;
    -webkit-transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
    z-index: 100;
}

/********************************************
    Bio Headline
********************************************/

#bio {
    color: #000;
    margin: .5em 0 1em;
    /* Counteract the padding/background images for links */
    padding-right: 2.2em;
    text-shadow: 2px 2px 1px #DDD;

    .bio-link {
        position: relative;
        display: inline-block;
        // transition: all 0.25s ease-in-out;
        // -webkit-transition: all 0.25s ease-in-out;
        // -moz-transition: all 0.25s ease-in-out;

        object {
            display: inline-block;
            height: 1em;
            padding-bottom: .1em;
            pointer-events: none;
            width: auto;
            vertical-align: bottom;
        }

        svg {
            display: inline-block;
            height: 36px;
            padding-bottom: .1em;
            pointer-events: none;
            width: auto;
            vertical-align: bottom;

            path,
            polygon,
            rect,
            circle {
                fill: #666;
            }

            // * {
            //     transition: all 0.25s ease-in-out;
            //     -webkit-transition: all 0.25s ease-in-out;
            //     -moz-transition: all 0.25s ease-in-out;
            // }
        }

        &#bio-partners:hover {
            color: #EF7622;

            path,
            polygon,
            rect,
            circle {
                fill: #EF7622;
            }
        }

        &#bio-hanerino:hover {
            color: #8EBD3F;

            path,
            polygon,
            rect,
            circle {
                fill: #8EBD3F;
            }
        }

        &#bio-cda:hover {
            color: #1946BA;

            path,
            polygon,
            rect,
            circle {
                fill: #1946BA;
            }
        }

        &#bio-midmodernized:hover {
            color: #c5996e;

            path,
            polygon,
            rect,
            circle {
                fill: #c5996e;
            }
        }

        // &:after {
        //     content: "";
        //     position: absolute;
        //     top: 0;
        //     right: 0;
        //     bottom: 0;
        //     left: 0;
        // }
    }
}

#bio h2,
#bio p {
    display: inline;
    font-family: 'Terminal Dosis Extra Light', 'Lucida Grande', 'Trebuchet MS', Arial, sans-serif;
    font-size: 2.25em;
    font-weight: 200;
    line-height: 1.3em;
    margin: 0;
    padding: 0;
}

#bio a {
    text-decoration: none;
}

/********************************************
    Main Body Copy
********************************************/

main p {
    font-size: 1.125em;
}

/********************************************
    Elsewhere Social Links
********************************************/

#elsewhere ul,
#elsewhere li {
    margin: 0;
    list-style: none;
    list-style-image: none;
}

#elsewhere ul {
    margin: .5em 0 1em;
}

#elsewhere li {
    float: left;
    font-family: 'Terminal Dosis Book', 'Lucida Grande', 'Trebuchet MS', Arial, sans-serif;
    font-size: 1.125em;
    line-height: 1.1em;
    margin: .5em 1.5em 1em 0;
}

#elsewhere li.last {
    margin-right: 0;
}

#elsewhere li a {
    display: block;
    min-height: 36px;
    padding-left: 42px;
    position: relative;
    text-decoration: none;
}

#elsewhere li a span {
    display: block;
    font-family: 'Quattrocento Regular', Cambria, Georgia, serif;
    font-size: .8em;
}

#elsewhere li#link-twitter a,
#elsewhere li#link-dribbble a,
#elsewhere li#link-flickr a,
#elsewhere li#link-amazon a {
    background: url("/images/icon-twitter-lines.png") no-repeat;
    transition: all 0.25s ease-in-out;
    -webkit-transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
}

#elsewhere li#link-dribbble a {
    background-image: url("/images/icon-dribbble-lines.png");
}

#elsewhere li#link-flickr a {
    background-image: url("/images/icon-flickr-lines.png");
}

#elsewhere li#link-amazon a {
    background-image: url("/images/icon-amazon-lines.png");
}

#elsewhere li#link-twitter a:hover,
#elsewhere li#link-dribbble a:hover,
#elsewhere li#link-flickr a:hover,
#elsewhere li#link-amazon a:hover {
    background: none;
}

#elsewhere li#link-twitter a:hover {
    color: #33CCFF;
}

#elsewhere li#link-dribbble a:hover {
    color: #C5376D;
}

#elsewhere li#link-flickr a:hover {
    color: #0062DC;
}

#elsewhere li#link-amazon a:hover {
	color: #F69404;
}

#elsewhere li#link-twitter a:hover img.icon-hover,
#elsewhere li#link-dribbble a:hover img.icon-hover,
#elsewhere li#link-flickr a:hover img.icon-hover,
#elsewhere li#link-amazon a:hover img.icon-hover {
    opacity: 1;
}

/********************************************
    Dribbble Previews
********************************************/

#dribbble {
    position: relative;
    z-index: 1;
    overflow: hidden;
}

#dribbble .preview {
    float: left;
    margin: 10px 25px 25px 6px;
    position: relative;
    background: #fff;
    width: auto;
    -webkit-box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
    transition: all 0.25s ease-in-out;
    -webkit-transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
}

#dribbble .preview.last {
    margin-right: 0;
}

#dribbble .preview a {
    text-decoration: none;
}

#dribbble .preview p {
    line-height: 100%;
    margin: 0;
    padding: 0 10px 10px;
}

#dribbble .preview img {
    height: 150px;
    width: 200px;
}

#dribbble .preview:before,
#dribbble .preview:after {
    background: #fff;
    content: '';
    z-index: -1;
    position: absolute;
    left: 10px;
    bottom: 14px;
    width: 100px;
    height: 50px;
    -webkit-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6);
    -moz-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6);
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6);
    -webkit-transform: skew(-15deg) rotate(-10deg);
    -moz-transform: skew(-15deg) rotate(-10deg);
    -ms-transform: skew(-15deg) rotate(-10deg);
    -o-transform: skew(-15deg) rotate(-10deg);
    transform: skew(-15deg) rotate(-10deg);
}


#dribbble .preview:after {
    left: auto;
    right: 10px;
    -webkit-transform: skew(15deg) rotate(10deg);
    -moz-transform: skew(15deg) rotate(10deg);
    -ms-transform: skew(15deg) rotate(10deg);
    -o-transform: skew(15deg) rotate(10deg);
    transform: skew(15deg) rotate(10deg);
}

#dribbble .preview h4 {
    background: #fff;
    font-size: .8em;
    font-weight: normal;
    line-height: 33px;
    margin: 0;
    padding: 0 8px;
    text-shadow: 0px 1px 0px white;
}

/********************************************
    Footer
********************************************/

#page-footer {
    background: url("/images/logo-ph-footer.png") no-repeat 50% 0;
    margin: 2.5em 0 1em;
    min-height: 36px;
    padding-top: 3em;
}

#page-footer p {
    background: url("/images/icon-cc-lines.png") no-repeat 0 0;
    color: #888;
    font-size: .875em;
    line-height: 1.3em;
    padding-left: 44px;
    position: relative;
    transition: all 0.25s ease-in-out;
    -webkit-transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
}

#page-footer p:hover {
    color: #000;
}

#page-footer p:hover img.icon-hover {
    opacity: 1;
}

